argocd/apps/homebridge/base/resources/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: homebridge
  labels:
    app: homebridge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homebridge
  serviceName: homebridge
  template:
    metadata:
      labels:
        app: homebridge
      name: homebridge
    spec:
      containers:
      - name: homebridge
        image: homebridge/homebridge:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8581
          name: http
        volumeMounts:
        - name: homebridge
          mountPath: /homebridge
          readOnly: false
      volumes:
      - name: homebridge
        persistentVolumeClaim:
          claimName: homebridge
