argocd/apps/homebridge/base/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-https-redirect@kubernetescrd,kube-system-ip-allow-list@kubernetescrd
  name: homebridge
spec:
  # Need to specify ingressClass for reasons: https://github.com/argoproj/argo-cd/issues/4863#issuecomment-1516246342
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homebridge
                port:
                  name: http
      host: <homebridge>
  tls:
    - hosts:
        - <homebridge>
      secretName: homebridge
